deploy/ingress/automationweb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automationweb-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: automationweb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: automationweb
            port:
              number: 7000
